# piqued

./: .gitignore  .piqued.toml  Cargo.toml  LICENSE  README.md
lsp/: .gitignore  .yarnrc.yml  bins  package.json  tsconfig.json
lsp/syntaxes/: postgresql.tmLanguage.json
rust/piqued/: .gitignore  Cargo.toml  Makefile  cross.toml  piqued.toml
rust/piqued/scripts/: install.sh  new-release.mts  package.json
rust/piqued/src/: lib.rs
rust/piqued/src/code_builder/: code_builder.rs  codegen_helper.rs
rust/piqued/src/codegen/: codegen.rs  utils.rs
rust/piqued/src/codegen/ts/: schema.rs
rust/piqued/src/config/: config.rs
rust/piqued/src/loose_parser/: old_loose_parser.rs  operators.rs  parse.rs  parse_cf.rs
rust/piqued/src/lsp/: backend.rs  formatters.rs  lsp.rs  lsp_fmt.rs  utils.rs
rust/piqued/src/parser/: parser.rs
rust/piqued/src/query/: query.rs
rust/piqued/src/utils/: result.rs
rust/piqued/src/workspace/: workspace.rs
src/: lib.rs
src/codegen/: codegen.rs  utils.rs
src/config/: config.rs
src/lsp/: lsp.rs  utils.rs
src/parser/: parser.rs
src/query/: query.rs
ts/: .gitignore  .yarnrc.yml  package.json  tsconfig.json
ts/client/: .eslintrc.cjs  .gitignore  .pnp.cjs  .prettierrc.cjs  README.md  package.json  tsconfig.json
ts/client/src/: control.ts  index.ts  order-managment.ts  parser.ts  smart-client.ts  types.ts
ts/lsp/: .gitignore  bins  language-configuration.json  package.json  tsconfig.json
ts/lsp/src/: extension.ts
ts/test-workspace/: .piqued.toml  package.json  piqued.toml  tsconfig.json
ts/test-workspace/src/: types.ts
(+10 files in other folders)
