[package]
name = "piqued"
version = "0.1.0"
edition = "2021"

[lib]
name = "piqued"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pg_query = "0.7"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = "0.17.0"
tokio-postgres = "0.7.7"