[package]
name = "piqued"
version = "0.1.0"
edition = "2021"

[lib]
name = "piqued"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pg_query = "0.7"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = "0.17.0"
tokio-postgres = "0.7.7"
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
string-builder = "0.2.0"
async-recursion = "1.0.0"
pathdiff = "0.2.1"